crates/hir-ty/tests/snapshots/jls_source_level__unnamed_lambda_at_21_is_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/UnnamedLambda.java:
package com.example;

import java.util.function.BiFunction;

class A {
    void m(BiFunction<Integer, Integer, Integer> f) {
        f = (_, x) -> x;
    }
}

@6:13: feature-not-supported-in-source-level: unnamed variables are not supported in source level 21 (use source level 22 or higher to enable unnamed variables)
