crates/hir-ty/tests/snapshots/jls_source_level__unnamed_lambda_at_22_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/UnnamedLambda.java:
package com.example;

import java.util.function.BiFunction;

class A {
    void m(BiFunction<Integer, Integer, Integer> f) {
        f = (_, x) -> x;
    }
}
