crates/hir-ty/tests/snapshots/jls_source_level__var_at_10_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/VarLocal.java:
package com.example;

class A {
    void m() {
        var x = 1;
    }
}
