crates/hir-ty/tests/snapshots/jls_source_level__var_at_9_is_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/VarLocal.java:
package com.example;

class A {
    void m() {
        var x = 1;
    }
}

@4:8: feature-not-supported-in-source-level: local variable type inference is not supported in source level 9 (use source level 10 or higher to enable local variable type inference)
