crates/hir-ty/tests/snapshots/jls_source_level__var_lambda_at_11_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/VarLambda.java:
package com.example;

import java.util.function.Function;

class A {
    void m(Function<Integer, Integer> f) {
        f = (var x) -> x;
    }
}
